removed Java 1.5 code